# msolve

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  msolve.pc.in
.github/workflows/: ci-sage.yml  msolve.yml
doc/: biblio.bib  macros.tex  msolve-tutorial.tex  tier-policy.md
doc/examples/: elim2_char1073741827.sh  elim_char1073741827.ms  elim_char1073741827.sh  empty_char0.ms  empty_char0.sh  grevlex_char1073741827.ms  grevlex_char1073741827.sh  grevlex_lm_char1073741827.sh  hypersurface_char0.ms  hypersurface_char0.sh  param_and_reals_char0.sh  param_char0.ms  param_char0.sh  param_char65521.ms  param_char65521.sh  param_simple.ms  param_simple.sh  reals_dim0.sh  reals_dim0_prec256.sh  saturate_char1073741827.ms  saturate_char1073741827.sh  simple_char0.ms  simple_char0.sh  simple_char65521.ms  simple_char65521.sh
include/: Makefile.am
include/msolve/: msolve-data.h  msolve.h
input_files/: bug-2nd-prime-bad.ms  bug-68.ms  bug-empty-tracer.ms  choice-linear-form-qq-real-roots.ms  cp-d3-n4-p2.ms  cyclic5-16.ms  cyclic5-31.ms  cyclic5-qq.ms  eco10-31.ms  eco11-31.ms  eco6-16.ms  eco6-31.ms  eco6-qq.ms  elim-31.ms  elim-qq.ms  empty-elim-qq.ms  f4sat-31.ms  f4sat-byone-31.ms  f4sat-field-char.ms  f4sat-is-saturated-check.ms  f4sat-zero-input.ms  groebner-g2.ms  henrion5-qq.ms  input-overflow-8.ms  input-overflow-a-16.ms  input-overflow-b-16.ms  issue-230.ms  issue-310.ms  issue_230_squared.ms  kat6-31.ms  kat7-qq.ms  kat8-qq-truncate.ms  linear-qq.ms  linear0-qq.ms  linear1-qq.ms  linear2-qq.ms  maxbitsize-bug.ms  mq-2-1.ms  multy-16.ms  multy-31.ms  (+25 more)
input_files/line_endings/: in1_dos.ms  in1_unix.ms  in2_dos_noeol.ms  in2_unix.ms  in3_unix.ms  in4_dos.ms
interfaces/: msolve-to-julia-file-interface.txt  msolve-to-maple-file-interface-macos.mpl  msolve-to-maple-file-interface.mpl  msolve-to-sage-file-interface.sage
m4/: ax_count_cpus.m4  ax_ext.m4
output_files/: F4SAT-31.res  F4SAT-byone-31.res  bug-2nd-prime-bad.res  bug-68.res  bug-chgvar.p256.res  bug-chgvar.res  bug-empty-tracer.g2.res  bug-empty-tracer.res  bug_68.res  choice-linear-form-qq.p1024.res  choice-linear-form-qq.res  cp_d_3_n_4_p_2.res  cyclic5-16.res  cyclic5-31.res  cyclic5-qq.P2.d4.res  cyclic5-qq.g2.e1.res  cyclic5-qq.g2.e2.res  cyclic5-qq.g2.res  eco10-31.res  eco11-31.res  eco6-16.res  eco6-31.res  eco6-qq.res  elim-31.e2.res  elim-31.g2.e1.res  elim-31.res  elim-qq.e2.res  elim-qq.g2.e2.res  elim-qq.res  empty-elim-qq.g2.e1.res  empty-elim-qq.g2.e2.res  f4sat-field-char.res  groebner-g2.g2.res  henrion5-qq.g2.e1.res  henrion5-qq.g2.e2.res  henrion5-qq.g2.res  henrion5-qq.res  input-overflow-16.res  input-overflow-8.res  issue_230.res  (+59 more)
src/: README.md
src/crt/: mpq_reconstruct.c  mpz_CRT_ui.c  ulong_extras.h
src/fglm/: Makefile  Makefile.am  aligned_alloc.h  berlekamp_massey.c  data_fglm.c  fglm.h  fglm_core.c  inner-product.c  libfglm.h  linalg-fglm.c  main.c  matrix-mult.c
src/msolve/: Makefile  Makefile.am  data.h  duplicate.c  getdelim.h  hilbert.c  io-general.c  io-general.h  iofiles.c  libmsolve.c  lifting-gb.c  lifting.c  linear.c  main.c  msolve-data.c  msolve-data.h  msolve.c  msolve.h  primes.c  streams.h
src/neogb/: Makefile  Makefile.am  basis.c  basis.h  convert.c  data.c  data.h  engine.c  engine.h  f4.c  f4.h  f4sat.c  f4sat.h  gb.c  hash.c  hash.h  io.c  io.h  la.h  la_ff_16.c  la_ff_32.c  la_ff_8.c  la_qq.c  libneogb.h  meta_data.c  meta_data.h  modular.c  modular.h  nf.c  nf.h  order.c  sba.c  sba.h  sort_r.h  stat.c  stat.h  symbol.c  test-driver  tools.c  tools.h  (+2 more)
src/upolmat/: nmod_mat_extra.h  nmod_mat_left_nullspace.c  nmod_mat_permute_rows.c  nmod_mat_poly.h  nmod_mat_poly_arith.c  nmod_mat_poly_io.c  nmod_mat_poly_mbasis.c  nmod_mat_poly_mem.c  nmod_mat_poly_set_from.c  nmod_mat_poly_shift.c  nmod_poly_mat_pmbasis.c  nmod_poly_mat_pmbasis.h  nmod_poly_mat_utils.c  nmod_poly_mat_utils.h
src/usolve/: Makefile  Makefile.am  bisection.h  data_usolve.c  debug.c  debug.h  descartes.c  descartes.h  evaluate.c  evaluate.h  libusolve.h  main.c  print_usolve.c  print_usolve.h  refine.c  refine.h  taylor_shift.c  taylor_shift.h  tests.c  tomaple.c  tomathematica.c  univmultiply.c  univmultiply.h  usolve.c  utils.c
test/diff/: diff_F4SAT-31.sh  diff_F4SAT-byone-31.sh  diff_bug-2nd-prime-bad.sh  diff_bug-68.sh  diff_bug-empty-tracer.sh  diff_bug_2nd_prime_bad.sh  diff_bug_68.sh  diff_bug_empty_tracer.sh  diff_choice-linear-form-qq-real-roots.sh  diff_choice-linear-form-qq.sh  diff_choice-linear-form.sh  diff_cp-d3-n4-p2.sh  diff_cp_d_3_n_4_p_2.sh  diff_cyclic5-16.sh  diff_cyclic5-31.sh  diff_cyclic5-qq.sh  diff_eco10-31.sh  diff_eco11-31.sh  diff_eco6-16.sh  diff_eco6-31.sh  diff_eco6-qq.sh  diff_elim-31.sh  diff_elim-qq.sh  diff_empty-elim-qq.sh  diff_f4sat-31.sh  diff_f4sat-byone-31.sh  diff_f4sat-field-char.sh  diff_f4sat-is-saturated-check.sh  diff_f4sat-zero-input.sh  diff_groebner-g2.sh  diff_henrion5-qq.sh  diff_input-overflow-16.sh  diff_input-overflow-8.sh  diff_input-overflow-a-16.sh  diff_input-overflow-b-16.sh  diff_issue-230-squared.sh  diff_issue-230.sh  diff_issue_230.sh  diff_issue_230_squared.sh  diff_kat6-31.sh  (+68 more)
test/fglm/: build_matrixn.c  build_matrixn_nonradical-radicalshape-31.c  build_matrixn_nonradical-shape-31.c  build_matrixn_nonradical_radicalshape-31.c  build_matrixn_nonradical_shape-31.c  build_matrixn_radical-shape-31.c  build_matrixn_radical_shape-31.c
test/input_files/: radical_shape-31.ms  radical_shape_char1073741827.ms
test/msolve/: file_endings_support.c  line_endings_support.c
test/msolve/files/: in3_dos.ms  in4_unix.ms
test/neogb/io/: validate_input_data.c
test/scripts/: fglm_build_matrixn.mpl  nonradical_radicalshape-31.mpl  nonradical_shape-31.mpl  radical_shape-31.mpl
